[gd_scene load_steps=2 format=3 uid="uid://so5y02msjm1d"]

[ext_resource type="Script" path="res://Scenes/Utils/logbook.gd" id="1_ofdhq"]

[node name="Logbook" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ofdhq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Sidebar" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
theme_override_constants/separation = 10

[node name="CrewSelect" type="OptionButton" parent="MarginContainer/HBoxContainer/Sidebar"]
layout_mode = 2
text_overrun_behavior = 3
clip_text = true

[node name="EntryList" type="ItemList" parent="MarginContainer/HBoxContainer/Sidebar"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonsContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Sidebar"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="NewEntryButton" type="Button" parent="MarginContainer/HBoxContainer/Sidebar/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "New"

[node name="DeleteEntryButton" type="Button" parent="MarginContainer/HBoxContainer/Sidebar/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Delete"

[node name="ExportButton" type="Button" parent="MarginContainer/HBoxContainer/Sidebar"]
layout_mode = 2
text = "Export Logbook"

[node name="BackButton" type="Button" parent="MarginContainer/HBoxContainer/Sidebar"]
layout_mode = 2
text = "Back"

[node name="MainContent" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="EntryContent" type="RichTextLabel" parent="MarginContainer/HBoxContainer/MainContent"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true

[node name="NotesLabel" type="Label" parent="MarginContainer/HBoxContainer/MainContent"]
layout_mode = 2
text = "Personal Notes:"

[node name="NotesEdit" type="TextEdit" parent="MarginContainer/HBoxContainer/MainContent"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="SaveButton" type="Button" parent="MarginContainer/HBoxContainer/MainContent"]
layout_mode = 2
size_flags_horizontal = 8
text = "Save Notes"
